--- a/test/input/variables.less
+++ b/test/input/variables.less
@@ -18,3 +18,6 @@
 @boxShadow: 0 0 @blurRadius black;
 @someText: 'Some value is @{someValue}';
 @fontBase: @fontSize ~"Helvetica Neue, Arial, sans-serif";
+
+// ignored prefix
+@_inverse: '#ccc';
